<resources>
    <string name="app_name" translatable="false">CloudGallery</string>

    <!--Common messages-->
    <string name="msg_disk">Disk</string>
    <string name="msg_photo">Photo</string>
    <string name="msg_settings">Settings</string>
    <string name="msg_trash">Trash</string>
    <string name="msg_warning">Warning</string>
    <string name="msg_uploading">Uploading</string>
    <string name="msg_wait">Connection waiting</string>
    <string name="msg_of">of</string>
    <string name="msg_clear_trash_description">The contents of the Trash will be permanently deleted. Are you sure?</string>
    <string name="msg_clear_trash">Clear trash</string>
    <string name="msg_file_saved">File saved in</string>
    <string name="msg_deleted">Deleted</string>
    <string name="msg_uploaded">Uploaded</string>
    <string name="msg_restored">Restored</string>
    <string name="msg_about">About</string>
    <string name="msg_additional">Additional</string>
    <string name="msg_version">Version</string>

    <!--Permission messages-->
    <string name="msg_request_permission">Request permission</string>
    <string name="msg_camera_permission">Allow access to the camera in settings.</string>
    <string name="msg_memory_permission">Allow access to the memory in settings.</string>

    <!--Intent chooser-->
    <string name="msg_image_chooser">Select Picture</string>
    <string name="msg_share_chooser">Share image using</string>

    <!--Yandex.Disk messages-->
    <string name="msg_yandex_account">Link your account</string>
    <string name="msg_yandex_failed_retrieve">Failed to retrieve data</string>
    <string name="msg_yandex_ready">Yandex.Disk is ready!</string>
    <string name="msg_yandex_start">Get started with Yandex.Disk</string>
    <string name="msg_yandex_trash_empty">Trash empty</string>

    <!--Yandex.Disk actions-->
    <string name="action_yandex_add_items">Add your photos</string>
    <string name="action_yandex_check_connection">Check your connection</string>
    <string name="action_yandex_link_account">Link</string>

    <!--Common actions-->
    <string name="action_delete">Delete</string>

    <string name="action_download">Download</string>
    <string name="action_make_photo">New image</string>
    <string name="action_restore">Restore</string>
    <string name="action_share">Share</string>
    <string name="action_upload">Upload</string>
    <string name="action_upload_from_gallery">Image from gallery</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_restore_all">Restore all</string>
    <string name="msg_internet_disable">Could not load new data</string>

    <!--Permissions-->
    <string name="text_request_rights">Request rights</string>
    <string name="text_memory_rights_description">Allow access to device memory to be able to </string>
    <string name="text_memory_rights_settings_description">Enable access to device memory in settings to be able to </string>
    <string name="text_camera_rights_description">Allow access to device camera to be able to </string>
    <string name="text_camera_rights_settings_description">Enable access to device camera in settings to be able to </string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_photo">Take photo</string>

</resources>
