<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_restore_all"
        android:title="@string/action_restore_all"
        android:icon="@drawable/ic_restore"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/action_delete_all"
        android:icon="@drawable/ic_delete_forever"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_download"
        android:visible="false"
        android:title="@string/action_download"
        android:icon="@drawable/ic_download"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:visible="false"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
</menu>